-   Added a write function to Facts that writes the fact list to disk as html
-   Added Remember module, which implents base 'tell' and 'seen' commands
-   Added repeated dispatch. Cut out matched trigger, then re-dispatch.
-   Added xelerus function lookup
-   Added fact list command
-   Added ping command
-   Add details command to facts. Shows details about a fact
-   fact shorthand lookup now takes an index also
-   Only match first string after trigger.
-   Refined fact module. Now has update, updateterm, forget and shorthand syntax for lookup
-   Added lock and unlock
-   Added a version command
-   Added TicketId command to the trac plugin
-   Added triggers
-   Dont require a trigger in a query
-   General purpose permission system
-   Better help system, now with optional example, syntax and doc
-   Module and config source reloading
-   Added initial Fact plugin
-   Added initial Admin and Info plugins